# particle-simulator-2026

./: CMakeLists.txt  README.md
include/: particle.h  particle.hpp  particle_type.h  particle_type.hpp  qualities.h  qualities.hpp  simulation.h  simulation.hpp
src/: main.cpp  particle.cpp  particle_type.cpp  qualities.cpp  simulation.cpp
